UI[Header/Fix]: Menu Action haven't scrollbar

--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -14,11 +14,17 @@
   }
 
   .menu-popper {
+    display: flex;
+    flex-direction: column;
     padding: 8px 0;
   }
 
   .menu-item {
     margin-left: 0;
+  }
+
+  .menu-body {
+    overflow-y: auto;
   }
 }
 
@@ -46,6 +52,7 @@
 
 // Header
 .header {
+  flex-shrink: 0;
   position: relative;
   height: 50px;
   margin-top: -8px;
